--- a/R Shiny App/shiny-openVA-vignette.Rnw
+++ b/R Shiny App/shiny-openVA-vignette.Rnw
@@ -36,29 +36,32 @@
 library(knitr)
 @
 
-\title{\bf Introduction to VA Analysis using the R Shiny App in Windows 10}
+\title{\bf Introduction to VA Analysis using \vapkg the R Shiny App in Windows 10}
 \author{Jason Thomas \& Sam Clark} % Others?
 \maketitle
 
 \section{Introduction}
 
-The aims of this docuement are to 
+% Do we need to say that this work is supported by VS?
+% Should we change the Title in the app since it now implements InterVA
+% should we use any other convetions, e.g. file names in \tt?
+
+There are several methods for analyzing verbal autopsy (VA) data with the goal of assigning a cause of death.  \vapkg for the
+\R free software environment consolidates many of these tools into a single package.  This document serves to introduce
+the \vapkg package through the installation and use of a user-friendly \R Shiny app.  After an initial setup, the user
+can analyze VA data with different algorithms and access results without having to learn the \R programming language.
+Part of the focus in the following sections relates to data collected and managed using the Open Data Kit, which is
+prepared for analysis using another \R package, namely, CrossVA.  The information presented here provides all the
+necessary steps for an introduction to \vapkg, but more information on the software can be found at the following sites:
 
 \begin{itemize}
-\item provide a little backround
-\item installation of \R Shiny App
-\item basic examples of use
+\item \R software environment -- \url{https://cran.r-project.org/}
+\item \vapkg -- \url{https://cran.r-project.org/package=openVA}
+% \item CrossVA -- \url{https://CRAN.R-project.org/package=CrossVA}; although a different CrossVA package is used for
+% the app
+\item \R Shiny -- \url{https://shiny.rstudio.com/}
+\item Open Data Kit (ODK) -- \url{https://opendatakit.org/}
 \end{itemize}
-
-% Do we need to say that this work is supported by VS?
-
-\section{Background}
-
-Background on VA.
-
-\par
-
-Background on \R and openVA, CrossVA, and ODK.
 
 \section{Installing and Starting \R Shiny App for Windows 10}
 
@@ -71,11 +74,9 @@ Download the \R Shiny zip file at \newline
 
 \noindent
 and unzip it -- the contents should include three files: (1) shiny-openVA.R (\R Shiny script file); (2)
-CrossVA\_0.9.3.zip (an \R package); and (3) va_data_from_odk.csv (an example data file from ODK).
+CrossVA\_0.9.3.zip (an \R package); and (3) va\_data\_from\_odk.csv (an example data file from ODK).
 
-\par
-
-Should we include some non-ODK files as well?
+% Should we include some non-ODK files as well?
 
 \begin{enumerate}
 \item Install Java (\url{https://java.com/en/download/})
@@ -122,52 +123,152 @@ install the necessary packages with the command
 \noindent which should be typed in the \R Console window at the prompt as follows:
 
 \includegraphics[width=\textwidth]{Images/install-1.png}
+\vspace{12pt}
 
 \noindent A new window should appear asking the user to select a Secure CRAN mirror (choose a CRAN mirror near your
 location), and the installation will begin after clicking the Ok button. 
 
 \includegraphics[width=\textwidth]{Images/install-2.png}
+\vspace{12pt}
 
 \noindent You will see A LOT of text scrolling in the \R Console which describes the installation of the numerous
 packages the Shiny app needs.  A modified version of the CrossVA package also needs to be installed with the following
-three steps: (1) select the \R menu bar options \BF{Packages\,>\,Install\,package(s)\,from\,local\,files\ldots} 
+three steps: (1) select the \R menu bar options \newline \BF{Packages\,>\,Install\,package(s)\,from\,local\,files\ldots} 
 
 \includegraphics[width=\textwidth]{Images/install-3.png}
+\vspace{12pt}
 
 \noindent (2) select the CrossVA\_0.9.3.zip file (you may need to navigate to the folder where the \R Shiny zip file was
 downloaded); and (3) click the open button at the bottom-right of the Select files window.
 
 \includegraphics[width=\textwidth]{Images/install-4.png}
+\vspace{12pt}
 
 \noindent Next open the shiny-openVA.R script (included in the \R Shiny zip file) through the \R menu bar
 \BF{File\,>\,Open\,Script\ldots} 
 
 \includegraphics[width=\textwidth]{Images/install-5.png}
+\vspace{12pt}
 
 \noindent then select the shiny-openVA.R script file and click the open button at the bottom-right of the Open script
 window.  
 
 
 \includegraphics[width=\textwidth]{Images/install-6.png}
+\vspace{12pt}
 
 \noindent This step should open a new \R Editor window. Make sure the focus is on the \R Editor window (by clicking on
 it) and run the shiny-openVA.R script through the menu bar \BF{Edit\,>\,Run\,all} which will execute the code (in the \R
-Console) and open your web browser with the \R Shiny app.
+Console) and open a web browser with the \R Shiny app.  It may take a few seconds for the app to appear in the web
+browser as the code is processed in the \R Console window.
 
 \includegraphics[width=\textwidth]{Images/install-7.png}
+\vspace{12pt}
 
 \includegraphics[width=\textwidth]{Images/install-8.png}
+\vspace{12pt}
 
-Finally, to stop the Shiny app, return to the \R Gui and click on the red stop sign button in the toolbar.
+Finally, to stop the Shiny app, return to the \R Gui and click on the red stop sign button in the tool bar.
 
 \includegraphics[width=\textwidth]{Images/install-9.png}
+\vspace{12pt}
 
-\section{Using the R Shiny App}
+\section{Using the R Shiny app}
 
+Once the \R Shiny app is running in a web browser there are is a panel on the left side of the web page where the data
+and analysis options are entered.  
 
+\begin{enumerate}
+\item {\bf Upload your own data here} -- The first input is a data file in Comma Separated Values (CSV) format.  After
+  clicking the Browse button a window will appear allowing you to select your data file.  Once the data have been loaded
+  the app produces the message ``Upload complete''.  There is a sample data file, va\_data\_from\_odk.csv, that is included
+  in the \R Shiny zip file and used in the examples below.  Note that once a data file has been uploaded a new button
+  will appear {\bf Analyze my data!}.
+\item {\bf Choose your preferences}  -- The data are assumed to be in a particular format with fields identifying the
+  age and gender of the deceased.  There are several options for selecting group-specific results.  Note that the time
+  it takes to process the data increases with the number of groups selected.
+  \begin{enumerate}
+  \item {\bf Include an analysis of all records?} -- This option is selected by default, but it is not necessary
+  \item {\bf Include sex-specific results?} -- simply click in the empty box to produce separate results for males and females
+  \item {\bf Include age-specific results?} -- simply click in the empty box to produce separate results for infants
+    (less than 1 year old), children (aged 1-4 years old), and adults (ages 5 and above)
+  \end{enumerate}
+\item {\bf Select Algorithm}
+  \begin{enumerate}
+  \item {\bf InSilico} -- the number of iterations in the simulations can also be specified; the default is 5,000, but
+    if you are simply exploring/testing out the app you may want to choose the lower end (and reduce the processing
+    time); the part of the InSilico algorithm is implemented in Java and thus a separate windows will appear with
+    a Java Progress Bar indicating the percentage of iterations that have been completed.  (Technical note: if the
+    algorithm does not converge in the specified number of iterations, it will automatically add additional iterations
+    to the simulation.)
+  \item {\bf InterVA4} -- specify the level of HIV and malaria prevalence; which are the same parameters required by the
+    InterVA-4 software developed by by Peter Byass (\url{http://www.interva.net/}).  Here is the description
+    from the InterVA-4 User Guide (version 4.04, 2017-06-06): ``These settings do not directly determine the cause of
+    death, but conceptually they are similar to a physician knowing that (s)he is working in a high or low malaria or
+    HIV population, irrespective of the details of a specific case currently under consideration.'' (p.6)
+  \end{enumerate}
+\item {\bf Data Checks}  -- Are the data from an  ODKBriefcase export?; this option is checked by  default and refers to
+  the CSV file generated  by the ODKBriefcase command line interface with arguments  to the options ``--export\_filename''
+  and ``--export\_directory'' (for more details, see \url{https://opendatakit.org/use/briefcase/}); for data from a
+  different source, see the InSilicoVA documentation for the required data format (\url{https://cran.r-project.org/package=InSilicoVA})
+\item {\bf Analyze my data!} -- Processing the data can take a while with a large amount of data.  With 500 cases it
+    may take anywhere from 5 to 30 minutes depending on the algorithm (InSilico typically takes longer, and the waiting
+    time will obviously increase with the number of iterations for the simulation).  Once pressed, a progress bar will
+    appear.
+\end{enumerate}
 
-\subsection{InSilicoVA}
+This side  panel also includes  several additional buttons  that are  inactive when no  data have been  analyzed.  These
+buttons allow you  to download results in the  form of CSV files and PDF  files (for plots), as well  as additional text
+files that document error and warning messages.  After providing the  necessary data and pressing the {\bf Analyze my data!} the
+data will be processed and these buttons will become active (i.e., you may click on them) as the results are obtained.
 
-\subsection{InterVA}
+\subsection{InSilicoVA Example}
+
+In our first example, we analyze the sample data set va\_data\_from\_odk.csv (15 records/deaths) generated from an
+ODKBriefcase export and included in the \R Shiny zip file.  Results are requested for all records and separately by
+gender and age groups.  InSilico is the algorithm being used with the number of iterations set to 600. This took about
+one minute on a laptop with a 2.7GHz Intel Core i-7 processor.
+
+\includegraphics[width=\textwidth]{Images/insilico-1.png}
+\vspace{12pt}
+
+The results are displayed on the right side of the web browser and begin with a table that lists the number of deaths by
+age and sex  that are included in the  data.  Summaries for the top 10  causes of death and plots  of the cause-specific
+mortality fraction  for the top  20 causes are  also included for each  group selected --  results are presented  in the
+following order: total population, males, females, infants, children  (results are empty since there are no child deaths
+in the data), and adults.   
+
+\includegraphics[width=\textwidth]{Images/insilico-2.png}
+\vspace{12pt}
+
+Finally, the results are available for download by clicking on  the buttons appearing in the
+panel on the left side of the browser, with the options described in the following list:
+
+\begin{itemize}
+\item {\bf Download Causes for All Records as .csv} -- this file includes the record ID (which is simply the row number
+  in the original data file) and the three most likely causes of death and the associated probabilities; note that some
+  records (5, 9, and 15) are excluded due to data errors (i.e., missing necessary data/indicators; or inconsistencies
+  among indicators that cannot be reconciled).  
+\item {\bf Download Summary for All Records as .csv} -- this file contains the information appearing in the web browser
+  under the title ``Summary of Results using All Records''
+\item {\bf Download Plot for All Records as .pdf} -- this file contains the CSMF displayed on the right side of the web browser
+\item The three options listed above are available for each group included in the analysis
+\item {\bf Download warnings as .txt} -- located at the very bottom of the panel on the left side of the web browser,
+  this text file includes the warning and error messages generated by InSilico and the issues encountered and, in some
+  cases, the steps taken to reconcile the inconsistencies in the data
+\end{itemize}
+
+\subsection{InterVA Example}
+
+For our second example, we analyze the same data but use the InterVA4 algorithm with the HIV and malaria options set to
+``very low''.
+
+\includegraphics[width=\textwidth]{Images/interva-1.png}
+\vspace{12pt}
+
+The results are slightly different because InSilico includes uncertainty (similar to confidence intervals) around the
+point estimates, whereas InterVA4 does not.  However, the number of deaths tabulated by age and sex as well as the top
+causes of death (top 10 for the summary and top 20 in the CSMF plot) are still included.  The corresponding results are
+also available for download by clicking on the buttons in the panel on the left side of the browser.
 
 \end{document}
