--- a/R Shiny App/shiny-openVA-vignette.Rnw
+++ b/R Shiny App/shiny-openVA-vignette.Rnw
@@ -83,12 +83,11 @@ CrossVA\_0.9.3.zip (an \R package); and (3) va\_data\_from\_odk.csv (an example 
 \item Download the \R executable (with same architecture as Java, e.g., 64-bit) from \ret
   \url{https://cran.r-project.org/bin/windows/base/} and double-click the file to install \R
 \item Start \R and install the necessary packages by typing the following in the \R Console window at the
-  prompt {\tt \em{>}}
+  prompt {\tt \em{>}} and then pressing the enter key
 <<install, eval=FALSE>>=
-install.packages(c("openVA", "shiny", "shinyjs"), dependencies=TRUE)
+install.packages(c("openVA", "shinyjs", "lubridate"), dependencies=TRUE)
 @
-  A new window should appear asking the user to select a Secure CRAN mirror, and the installation will begin after clicking the
-  Ok button.
+A new window should appear asking the user to select a Secure CRAN mirror, and the installation will begin after clicking the Ok button.
 \item Install the CrossVA package (included in the \R Shiny zip file) by clicking, in the \R menu bar, \BF{
     Packages\,>\,Install\,package(s)\,from\,local\,files\ldots} then select the CrossVA\_0.9.3.zip file (you may need to
   navigate to the folder where the \R Shiny zip file was downloaded) and click the open button at the bottom-right of
@@ -105,10 +104,10 @@ install.packages(c("openVA", "shiny", "shinyjs"), dependencies=TRUE)
 
 The \R software is available for download from the Comprehensive R Archive Network (CRAN)
 \url{https://cran.r-project.org/bin/windows/base/}.  Installation instructions are also available from CRAN, but the
-process should be familiar: download the executable file (ending in .exe and double-click the file.  The \R
-Shiny app uses several packages, one of which requires Java (version 6 or above) to be installed on your computer
-(\url{https://java.com/en/download/}).  It is not unusual to experience difficulties while trying to configure \R
-to work with Java.  For more details about the configuration procedure, see the InSilicoVA manual
+process should be familiar: download the executable file (ending in .exe and double-click the file.  The \R Shiny app
+uses several packages, one of which requires Java (version 6 or above) to be installed on your computer
+(\url{https://java.com/en/download/}).  It is not unusual to experience difficulties while trying to configure \R to
+work with Java.  For more details about the configuration procedure, see the InSilicoVA manual
 (\url{https://github.com/richardli/InSilicoVA/blob/master/Documents/Insilico-manual.pdf}).
 
 \par
@@ -125,42 +124,54 @@ install the necessary packages with the command
 \includegraphics[width=\textwidth]{Images/install-1.png}
 \vspace{12pt}
 
-\noindent A new window should appear asking the user to select a Secure CRAN mirror (choose a CRAN mirror near your
-location), and the installation will begin after clicking the Ok button. 
+\noindent The {\tt dependencies=TRUE} option will tell \R to install many more packages than just the three packages
+included in the command.  For example, the following packages (along with many more) will also be installed: InSilicoVA,
+InterVA4, nbc4va, Tariff, rJava, and shiny.  
+
+\par
+
+After pressing the enter key in the \R console, a new window should appear (as shown in the following figure) asking the
+user to select a Secure CRAN mirror (choose a CRAN mirror near your location), and the installation will begin after
+clicking the Ok button.
 
 \includegraphics[width=\textwidth]{Images/install-2.png}
 \vspace{12pt}
 
 \noindent You will see A LOT of text scrolling in the \R Console which describes the installation of the numerous
-packages the Shiny app needs.  A modified version of the CrossVA package also needs to be installed with the following
-three steps: (1) select the \R menu bar options \newline \BF{Packages\,>\,Install\,package(s)\,from\,local\,files\ldots} 
+packages the Shiny app needs.  
+
+\par
+
+A modified version of the CrossVA package also needs to be installed with the following three steps: (1) select the \R
+menu bar options \newline \BF{Packages\,>\,Install\,package(s)\,from\,local\,files\ldots}
 
 \includegraphics[width=\textwidth]{Images/install-3.png}
 \vspace{12pt}
 
-\noindent (2) select the CrossVA\_0.9.3.zip file (you may need to navigate to the folder where the \R Shiny zip file was
-downloaded); and (3) click the open button at the bottom-right of the Select files window.
+\noindent (2) select the CrossVA\_0.9.3.zip file (as shown in the following figure; you may need to navigate to the
+folder where the \R Shiny zip file was downloaded); and (3) click the open button at the bottom-right of the Select
+files window.
 
 \includegraphics[width=\textwidth]{Images/install-4.png}
 \vspace{12pt}
 
 \noindent Next open the shiny-openVA.R script (included in the \R Shiny zip file) through the \R menu bar
-\BF{File\,>\,Open\,Script\ldots} 
+\BF{File\,>\,Open\,Script\ldots}
 
 \includegraphics[width=\textwidth]{Images/install-5.png}
 \vspace{12pt}
 
 \noindent then select the shiny-openVA.R script file and click the open button at the bottom-right of the Open script
-window.  
+window.
 
 
 \includegraphics[width=\textwidth]{Images/install-6.png}
 \vspace{12pt}
 
-\noindent This step should open a new \R Editor window. Make sure the focus is on the \R Editor window (by clicking on
-it) and run the shiny-openVA.R script through the menu bar \BF{Edit\,>\,Run\,all} which will execute the code (in the \R
-Console) and open a web browser with the \R Shiny app.  It may take a few seconds for the app to appear in the web
-browser as the code is processed in the \R Console window.
+\noindent This step should open a new \R Editor window. Make sure the focus is on the \R Editor window (by clicking in
+that window) and run the shiny-openVA.R script through the menu bar \BF{Edit\,>\,Run\,all} which will execute the code
+(in the \R Console) and open a web browser with the \R Shiny app.  It may take a few seconds for the app to appear in
+the web browser as the code is processed in the \R Console window.
 
 \includegraphics[width=\textwidth]{Images/install-7.png}
 \vspace{12pt}
@@ -176,7 +187,7 @@ Finally, to stop the Shiny app, return to the \R Gui and click on the red stop s
 \section{Using the R Shiny app}
 
 Once the \R Shiny app is running in a web browser there are is a panel on the left side of the web page where the data
-and analysis options are entered.  
+and analysis options are entered.
 
 \begin{enumerate}
 \item {\bf Upload your own data here} -- The first input is a data file in Comma Separated Values (CSV) format.  After
@@ -188,10 +199,15 @@ and analysis options are entered.
   age and gender of the deceased.  There are several options for selecting group-specific results.  Note that the time
   it takes to process the data increases with the number of groups selected.
   \begin{enumerate}
-  \item {\bf Include an analysis of all records?} -- This option is selected by default, but it is not necessary
-  \item {\bf Include sex-specific results?} -- simply click in the empty box to produce separate results for males and females
-  \item {\bf Include age-specific results?} -- simply click in the empty box to produce separate results for infants
-    (less than 1 year old), children (aged 1-4 years old), and adults (ages 5 and above)
+  \item {\bf Include an analysis of all records?} -- This option is selected by default, but it is not necessary.
+  \item {\bf Include sex-specific results?} -- Simply click in the empty box to produce separate results for males and females.
+  \item {\bf Include age-specific results?} -- Simply click in the empty box to produce separate results for infants
+    (less than 1 year old), children (aged 1-4 years old), and adults (ages 5 and above).
+  \item {\bf Number of causes to include in summaries/plots} -- The Shiny app will dislplay the VA results in several
+    tables and plots showing a list of the top (i.e., most prevalent) causes of death.  Slide the bar right (or left) to
+    include more (less) causes in the summaries of the results.  The default is to include 10 causes, with a minimum and
+    maximum of 5 and 20, respectively -- this was simply a design choice for the app, \vapkg can include any number
+    of causes the user wants.
   \end{enumerate}
 \item {\bf Select Algorithm}
   \begin{enumerate}
@@ -206,6 +222,9 @@ and analysis options are entered.
     from the InterVA-4 User Guide (version 4.04, 2017-06-06): ``These settings do not directly determine the cause of
     death, but conceptually they are similar to a physician knowing that (s)he is working in a high or low malaria or
     HIV population, irrespective of the details of a specific case currently under consideration.'' (p.6)
+  \item \vapkg includes addtional algorithms, namely Tariff (\url{https://cran.r-project.org/package=Tariff}) and the
+   Bayes Classifier for Verbal Autopsy Data (\url{https://cran.r-project.org/package=nbc4va}), but these options require
+   several additional steps to work with ODK exports of the WHO VA instruments and thus are not included in the app.
   \end{enumerate}
 \item {\bf Data Checks}  -- Are the data from an  ODKBriefcase export?; this option is checked by  default and refers to
   the CSV file generated  by the ODKBriefcase command line interface with arguments  to the options ``--export\_filename''
@@ -225,18 +244,22 @@ data will be processed and these buttons will become active (i.e., you may click
 \subsection{InSilicoVA Example}
 
 In our first example, we analyze the sample data set va\_data\_from\_odk.csv (15 records/deaths) generated from an
-ODKBriefcase export and included in the \R Shiny zip file.  Results are requested for all records and separately by
-gender and age groups.  InSilico is the algorithm being used with the number of iterations set to 600. This took about
-one minute on a laptop with a 2.7GHz Intel Core i-7 processor.
+ODKBriefcase export and included in the \R Shiny zip file (the corresponding input option is selected by default).
+Results are requested for all records, as well as separately by gender and age groups. The top 8 causes will be included
+in the summaries of the results (as chosen with the slider input).  InSilico is the algorithm being used with the number
+of iterations set to 600. This took about one minute on a laptop with a 2.7GHz Intel Core i-7 processor.
 
 \includegraphics[width=\textwidth]{Images/insilico-1.png}
 \vspace{12pt}
 
+\includegraphics[width=2in]{Images/java.png}
+\vspace{12pt}
+
 The results are displayed on the right side of the web browser and begin with a table that lists the number of deaths by
-age and sex  that are included in the  data.  Summaries for the top 10  causes of death and plots  of the cause-specific
-mortality fraction  for the top  20 causes are  also included for each  group selected --  results are presented  in the
+age and sex  that are included in the  data.  Summaries for the top 8  causes of death and plots  of the cause-specific
+mortality fraction  for the top  8 causes are  also included for each  group selected --  results are presented  in the
 following order: total population, males, females, infants, children  (results are empty since there are no child deaths
-in the data), and adults.   
+in the data), and adults.
 
 \includegraphics[width=\textwidth]{Images/insilico-2.png}
 \vspace{12pt}
@@ -245,17 +268,22 @@ Finally, the results are available for download by clicking on  the buttons appe
 panel on the left side of the browser, with the options described in the following list:
 
 \begin{itemize}
-\item {\bf Download Causes for All Records as .csv} -- this file includes the record ID (which is simply the row number
+\item {\bf Download Plot of Age Distribution as .pdf} -- This file contains a histogram of the number of deaths in the three
+  age groups (infants, children, and adults).
+\item {\bf Download Causes for All Records as .csv} -- This file includes the record ID (which is simply the row number
   in the original data file) and the three most likely causes of death and the associated probabilities; note that some
   records (5, 9, and 15) are excluded due to data errors (i.e., missing necessary data/indicators; or inconsistencies
-  among indicators that cannot be reconciled).  
-\item {\bf Download Summary for All Records as .csv} -- this file contains the information appearing in the web browser
-  under the title ``Summary of Results using All Records''
-\item {\bf Download Plot for All Records as .pdf} -- this file contains the CSMF displayed on the right side of the web browser
-\item The three options listed above are available for each group included in the analysis
-\item {\bf Download warnings as .txt} -- located at the very bottom of the panel on the left side of the web browser,
-  this text file includes the warning and error messages generated by InSilico and the issues encountered and, in some
-  cases, the steps taken to reconcile the inconsistencies in the data
+  among indicators that cannot be reconciled).
+\item {\bf Download Summary for All Records as .csv} -- This file contains the information appearing in the web browser
+  under the title ``Summary of Results using All Records''.
+\item {\bf Download Plot for All Records as .pdf} -- This file contains the CSMF displayed on the right side of the web browser
+\begin{center}
+\includegraphics[width=4in]{Images/insilico-plotAll.pdf}
+\end{center}
+\item The three options listed above are available for each group included in the analysis.
+\item {\bf Download warnings as .txt} -- This option is located at the very bottom of the panel on the left side of the web browser,
+  and the associated text file includes the warning and error messages generated by InSilico and the issues encountered and, in some
+  cases, the steps taken to reconcile the inconsistencies in the data.
 \end{itemize}
 
 \subsection{InterVA Example}
@@ -270,5 +298,9 @@ The results are slightly different because InSilico includes uncertainty (simila
 point estimates, whereas InterVA4 does not.  However, the number of deaths tabulated by age and sex as well as the top
 causes of death (top 10 for the summary and top 20 in the CSMF plot) are still included.  The corresponding results are
 also available for download by clicking on the buttons in the panel on the left side of the browser.
+
+\begin{center}
+\includegraphics[width=4in]{Images/interva-plotAll.pdf}
+\end{center}
 
 \end{document}
